rust/test/dt/type_constructor/pair/homo_pair_missing_generic_test.rs
use type_constructor::prelude::*;


fn main()
{

  types!( pair Bad : Option );

}